Change legend text to left align and fix missing </tr>

--- a/docs/style.css
+++ b/docs/style.css
@@ -43,6 +43,10 @@ body {
 	};
 }
 
+#legend td {
+	text-align: left;
+}
+
 .legend-box {
 	display: block;
 	width: 25px;
